# tiny_rtos

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  renode_setup.resc
src/: main.c  scheduler.cpp  startup_stm32f412cx.s
